# tracker_fw

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.common  README.md  west.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: action.yml
asset_tracker_v2/: BOO_pm_static_nrf9160dk_nrf9160_ns_0_14_0.yml  BOO_pm_static_nrf9161dk_nrf9161_ns  make_with_wifi.sh  minicom.cap  nrf.patch  nrf9160dk_nrf9160_ns.overlay  overlay-nrf7002ek-wifi-scan-only.conf  prj.conf
asset_tracker_v2/boards/: nrf9160dk_nrf9160_ns.overlay  nrf9160dk_nrf9160_ns_0_14_0.conf  nrf9160dk_nrf9160_ns_0_14_0.overlay
aws_da_shell_cmds/: CMakeLists.txt  Kconfig  nrf5340dk_nrf5340_cpuapp_mfg.overlay  prj.conf  readme.md
boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuappns.overlay  nrf5340dk_nrf5340_cpunet.overlay
chekr_app/: CMakeLists.txt  Kconfig  Makefile  README.md  prj.conf
chekr_app/boards/nrf5340dk/nrf5340/: cpuapp.overlay
chekr_app/child_image/: mcuboot.conf
chekr_app/src/: main.c  pmic_stub.c  shell.c  utils.c  watchdog.c
chekr_app/src/ble/: CMakeLists.txt
chekr_app/src/ble/include/: ble.h  chekr.h
chekr_app/src/ble/src/: ble.c  chekr.c  chekr_dash.c  chekr_record.c
chekr_app/src/imu/include/: imu.h
chekr_app/src/imu/src/: imu.c
chekr_app/src/include/: app_version.h  pmic_stub.h  utils.h  watchdog.h
chekr_app/src/ml/: CMakeLists.txt
chekr_app/src/ml/include/: baseLib.hpp  ml.h
chekr_app/src/ml/src/: ml.cpp  ml_test.cpp
chekr_app/src/pmic/include/: pmic.h
chekr_app/src/pmic/src/: pmic.c  pmic_shell.c
chekr_app/src/storage/include/: storage.h
chekr_app/src/storage/src/: storage.c
chekr_app/tests/bluecent-main/: .gitignore  M1_Demo_record_Fetch.py  M1_Demo_record_Session.py  README.md  Test_1.py  Test_2.py  Test_3.py  act_data.py  battery_monitor.py  ble_comm.py  bluecent.py  chekrapplink.py  csv_file.py  indata.json  mcrc16.py  ndc_annotate_parse.py  ndc_cloud_data_parser.py  test_fw_version.py  vdo_file.py
chekr_app/tests/bluecent-main/videoannotation/: videoannotate_01.py  videoannotate_02.py  videoannotate_03.py
chekr_app/tests/culvert/: cloud_decode.py  command.py  concat.sh  epochtime.py  log_config.py  misc_cmds.py  plot.py  record.py  record_session.py  utils.py
commercial_collar/: CMakeLists.txt  Kconfig  newstatic.txt  nrf5340dk_nrf5340_cpuapp_mfg.overlay  prj.conf  prj.release.conf  scrub_static.py
commercial_collar/child_image/: hci_rpmsg.conf  hci_rpmsg.overlay  mcuboot.conf
commercial_collar/child_image/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.overlay
commercial_collar/src/: d1_time.c  login.c  login.h  main.c  nrf53_upgrade.c  pm_shell.c  self_check.c  shell.c
commercial_collar/src/ble/: CMakeLists.txt
commercial_collar/src/ble/include/: ble.h  tracker_service.h
commercial_collar/src/ble/src/: ble.c  tracker_service.c
commercial_collar/src/comm_mgr/: CMakeLists.txt
commercial_collar/src/comm_mgr/include/: commMgr.h  fota.h  log_telemetry.h  radioMgr.h
commercial_collar/src/comm_mgr/src/: commMgr.c  fota.c  fota_shell.c  log_telemetry.c  radioMgr.c
commercial_collar/src/include/: app_version.h  d1_time.h  nrf53_upgrade.h  self_check.h
commercial_collar/src/ml/: CMakeLists.txt
commercial_collar/src/ml/include/: baseLib.hpp  ml.h  ml_decode.h  ml_encode.h  ml_types.h
commercial_collar/src/ml/src/: README.md  inference.cddl  ml.cpp  ml_decode.c  ml_encode.c
commercial_collar/src/storage/: CMakeLists.txt
commercial_collar/src/storage/include/: storage.h
commercial_collar/src/storage/src/: storage.c
commercial_collar/src/wifi/: CMakeLists.txt
commercial_collar/src/wifi/include/: net_mgr.h  wifi.h  wifi_at.h  wifi_spi.h
commercial_collar/src/wifi/src/: net_mgr.c  wifi.c  wifi_at.c  wifi_shell.c  wifi_spi.c
commercial_collar/src/zbus/: CMakeLists.txt
commercial_collar/src/zbus/include/: d1_zbus.h
commercial_collar/src/zbus/src/: d1_zbus.c
commercial_collar/tests/: log_config.py  service_test.py
demo_shell/: CMakeLists.txt  Kconfig  nrf5340dk_nrf5340_cpuapp_mfg.overlay  prj.conf
factory_tests/: EVT2_RF1_Sample_Test_Flow_CATM_V3.txt  EVT2_RF1_Sample_Test_Flow_Wifi_V3.txt  EVT2_RF2_Sample_Test_Flow_CATM.txt  EVT2_RF2_Sample_Test_Flow_Wifi.txt
hello_world/: CMakeLists.txt  build.sh  prj.conf
hello_world/src/: main.c
imu_test/: CMakeLists.txt  README.md  prj.conf
lte_test_nestle/: CMakeLists.txt  Kconfig  MANU_README.rst  Makefile  mosquitto.conf  nrf9160dk_nrf9160_ns_mfg.overlay  overlay-tls-nrf91.conf  prj.conf
machine_learning_model/: CMakeLists.txt  Kconfig  prj.conf
machine_learning_model/libs/: Lib_AI.hpp  baseLib.hpp
machine_learning_model/src/: main.cpp
mfg_at_client/: CMakeLists.txt  Kconfig  prj.conf
mfg_at_client/src/: main.c
mfg_at_client/src/5340Interface/: CMakeLists.txt
mfg_at_client/src/5340Interface/include/: 5340_interface.h  spis_interface.h  uart_interface.h
mfg_at_client/src/5340Interface/src/: 5340_interface.c  spis_interface.c  uart_interface.c
mqtt_info/: Readme.md
purina_d1_lte/: CMakeLists.txt  Kconfig  Makefile  prj.conf  prj.release.conf  sample.yaml
purina_d1_lte/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
purina_d1_lte/certs/: PURINA_CERTS.sh
purina_d1_lte/certs/ps/: sim.crt  sim.key
purina_d1_lte/certs/pur/: sim.key
purina_d1_lte/child_image/: mcuboot.conf
purina_d1_lte/child_image/mcuboot/boards/: nrf9160dk_nrf9160.overlay  nrf9160dk_nrf9160_ns.overlay
purina_d1_lte/src/: main.c  wi.c
purina_d1_lte/src/gps/: CMakeLists.txt  Kconfig  assistance.c  assistance_minimal.c  assistance_supl.c  d1_gps.c  d1_gps.h
purina_d1_lte/src/include/: wi.h
purina_d1_lte/src/network/: network.c  network.h
purina_d1_lte/src/purina_iot/: fota.c  fota.h  nrf91_upgrade.c  nrf91_upgrade.h  transport.c  transport.h
purina_d1_lte/src/spi/: spis_interface.c
purina_d1_lte/src/status/: status.c  status.h
purina_d1_lte/src/zbus/: shutdown.c  zbus_msgs.c  zbus_msgs.h
tc_lte_client/: CMakeLists.txt  Makefile  nrf9160dk_nrf9160_ns_mfg.overlay
thingy_aws_test/: Makefile  prj.conf
(+100 files in other folders)
